added CSS to project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -34,8 +36,11 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li><a href="https://education.github.com/git-cheat-sheet-education.pdf">Commands cheat sheet</a></li>
-          <li><a href="https://dev.classmethod.jp/articles/git-bash-commands/">Git bash commands</a></li>
+          <li>git add -A, adds all changes to the file</li>
+          <li>git commit -m “[descriptive message]”, commit your staged content as a new commit snapshot</li>
+          <li>git pull origin main, pulls files from main branch in github to your computer.</li>
+          <li><a href="https://education.github.com/git-cheat-sheet-education.pdf" style="color: #d16ab7" >Commands cheat sheet</a></li>
+          <li><a href="https://dev.classmethod.jp/articles/git-bash-commands/" style="color: #d16ab7" >Git bash commands</a></li>
         </ul>
       </section>
 
@@ -49,7 +54,12 @@
       <section class="card" id="javascript-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>Link element connects css to html, rel is attribute, and href if location of css file.Example : link rel="stylesheet" href="./assets/style.css"</li>
+          <li> CSS box model<img src="./assets/310-box-model.png" class="li-image" alt="Declarations and Property Value rule" /> </li>
+          <li> Declarations and Property Value rule <img src="./assets/300-css-rule.png" class="li-image" alt="CSS box model"/> </li>
+          <li><a href="https://htmlcolorcodes.com" style="color: #d16ab7">RGB Color codes</a> </li>
+          <li>You can create classes of css by putting . in front of the name ex: .card; When * applies to the whole code, be sure to not repeat code if possible!   </li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" style="color: #d16ab7"> CSS: Cascading Style Sheets</a></li>
         </ul>
       </section>
     </main>
