--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
       <section class="card" id="git-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Math.floor() and Math.random() are both properties of JavaScript's built-in Math object that can be used together to generate a random number.</li>
+          <li>The console.log method was created to make it easier for developers to test their code.</li>
+          <li>If we were to switch these statements so that console.log(topics) is first, we would see undefined in the console. This is because we define topics AFTER we tell the computer to log it in the console.</li>
+          <li>if you want something to be done multiple times use a for loop.</li>
+          <li>if statement let's you have a specific selection when condition is tru or false or equals to certain number.</li>
+          <li>An array is a single variable that is used to hold a group of data. Arrays are typically used to hold data that is related in some way.Arrays are useful tools for storing multiple items with different data types in a single variable, but not all arrays must have multiple data types.</li>
         </ul>
       </section>
 
